--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Staggered Gallery</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&amp;family=Shizuru&amp;family=Raleway&amp;family=Lemonada&amp;family=Poppins&amp;family=Acme&amp;family=Oswald&amp;family=Dancing+Script&amp;family=Roboto Condensed&amp;display=swap" rel="stylesheet">
