--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="heading">
+        <h1>Staggered Gallery</h1>
+    </div>
     <section class="gallery">
         <div class="column1">
             <div class="image">
